force-app/main/default/objects/Asset/fields/Account_Customer__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets (Owner)</relationshipLabel>
    <relationshipName>Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>