force-app/main/default/objects/Asset/fields/Account_Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Primary_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Primary Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets (Account Primary Owner)</relationshipLabel>
    <relationshipName>Assets_AccountPrimary</relationshipName>
    <type>Lookup</type>
</CustomField>