force-app/main/default/objects/Asset/fields/Asset_Code__c.field-meta.xml
<CustomField>
    <fullName>Asset_Code__c</fullName>
    <label>Asset Code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>