force-app/main/default/objects/Asset/fields/Bike_Status__c.field-meta.xml
<CustomField>
    <fullName>Bike_Status__c</fullName>
    <formula>TEXT(Product2.Bike_Type_2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bike Status</label>
    <type>Text</type>
</CustomField>