force-app/main/default/objects/Asset/fields/Bike_Type__c.field-meta.xml
<CustomField>
    <fullName>Bike_Type__c</fullName>
    <formula>Text(Product2.Bike_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bike Type</label>
    <type>Text</type>
</CustomField>