force-app/main/default/objects/Asset/fields/Color_CodeColor__c.field-meta.xml
<CustomField>
    <fullName>Color_CodeColor__c</fullName>
    <formula>Product2.Color_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color CodeColor</label>
    <type>Text</type>
</CustomField>