force-app/main/default/objects/Asset/fields/Color_Name__c.field-meta.xml
<CustomField>
    <fullName>Color_Name__c</fullName>
    <formula>Product2.Color_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color Name</label>
    <type>Text</type>
</CustomField>