force-app/main/default/objects/Asset/fields/Color_Type__c.field-meta.xml
<CustomField>
    <fullName>Color_Type__c</fullName>
    <formula>TEXT( Product2.Color_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color Type</label>
    <type>Text</type>
</CustomField>