force-app/main/default/objects/Asset/fields/Contract_Information_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Information_Name__c</fullName>
    <formula>Order__r.Opportunity.Contract.Contract_Information__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Information Name</label>
    <type>Text</type>
</CustomField>