force-app/main/default/objects/Asset/fields/Crankcase_No__c.field-meta.xml
<CustomField>
    <fullName>Crankcase_No__c</fullName>
    <label>Crankcase No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>