force-app/main/default/objects/Asset/fields/Create_Manual__c.field-meta.xml
<CustomField>
    <fullName>Create_Manual__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create Manual</label>
    <type>Checkbox</type>
</CustomField>