force-app/main/default/objects/Asset/fields/Current_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>