force-app/main/default/objects/Asset/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <formula>Account_Customer__r.PersonMobilePhone</formula>
    <label>Customer Phone</label>
    <type>Text</type>
</CustomField>