force-app/main/default/objects/Asset/fields/Date_Sale__c.field-meta.xml
<CustomField>
    <fullName>Date_Sale__c</fullName>
    <label>Date Sale</label>
    <type>Date</type>
</CustomField>