force-app/main/default/objects/Asset/fields/DO_DL__c.field-meta.xml
<CustomField>
    <fullName>DO_DL__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DO DL</label>
    <type>Text</type>
</CustomField>