force-app/main/default/objects/Asset/fields/DO_DL_Code__c.field-meta.xml
<CustomField>
    <fullName>DO_DL_Code__c</fullName>
    <formula>Account.Branch__r.DO_DL_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DO/DL Code</label>
    <type>Text</type>
</CustomField>