force-app/main/default/objects/Asset/fields/Frame_Number__c.field-meta.xml
<CustomField>
    <fullName>Frame_Number__c</fullName>
    <externalId>true</externalId>
    <label>Frame No</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>