force-app/main/default/objects/Asset/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <formula>Order__r.Invoice_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>