force-app/main/default/objects/Asset/fields/Invoiced_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Date__c</fullName>
    <formula>Order__r.Invoice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoiced Date</label>
    <type>Date</type>
</CustomField>