force-app/main/default/objects/Asset/fields/Is_Apply_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Is_Apply_Promotion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Apply Promotion</label>
    <type>Checkbox</type>
</CustomField>