force-app/main/default/objects/Asset/fields/IsOwner__c.field-meta.xml
<CustomField>
    <fullName>IsOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field used to check the owner of the bike.</description>
    <label>IsOwner</label>
    <type>Checkbox</type>
</CustomField>