force-app/main/default/objects/Asset/fields/Number_of_Month_Gar_del__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Month_Gar_del__c</fullName>
    <description>Số tháng bảo hành ( tính tháng chính xác không tính trung bình)</description>
    <label>Number Of Month Guarantee</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>