force-app/main/default/objects/Asset/fields/Opportunity_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Reserved__c</fullName>
    <formula>Order__r.Opportunity.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Reserved</label>
    <type>Text</type>
</CustomField>