force-app/main/default/objects/Asset/fields/Plate_No__c.field-meta.xml
<CustomField>
    <fullName>Plate_No__c</fullName>
    <label>Plate No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>