force-app/main/default/objects/Asset/fields/PlateNo__c.field-meta.xml
<CustomField>
    <fullName>PlateNo__c</fullName>
    <label>PlateNo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>