force-app/main/default/objects/Asset/fields/Sale_Name__c.field-meta.xml
<CustomField>
    <fullName>Sale_Name__c</fullName>
    <formula>Product2.Sales_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale Name</label>
    <type>Text</type>
</CustomField>