force-app/main/default/objects/Asset/fields/Sale_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sale_Owner__c</fullName>
    <formula>Order__r.Opportunity.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale Owner</label>
    <type>Text</type>
</CustomField>