force-app/main/default/objects/Asset/fields/Sale_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Sale_Quantity__c</fullName>
    <label>Sale Quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>