force-app/main/default/objects/Asset/fields/Titile_No__c.field-meta.xml
<CustomField>
    <fullName>Titile_No__c</fullName>
    <label>Titile No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>