force-app/main/default/objects/Asset/fields/VinID__c.field-meta.xml
<CustomField>
    <fullName>VinID__c</fullName>
    <label>Frame No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>