force-app/main/default/objects/Asset/fields/Warrant_Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>Warrant_Expired_Date__c</fullName>
    <label>Warrant Expired Date</label>
    <type>Date</type>
</CustomField>