force-app/main/default/objects/Asset/fields/Warranty_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Effective_Date__c</fullName>
    <label>Warranty Effective Date</label>
    <type>Date</type>
</CustomField>