force-app/main/default/objects/Asset/fields/Warrranty_condition__c.field-meta.xml
<CustomField>
    <fullName>Warrranty_condition__c</fullName>
    <label>Warrranty condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>