force-app/main/default/objects/Asset/fields/Year_Tradein__c.field-meta.xml
<CustomField>
    <fullName>Year_Tradein__c</fullName>
    <label>Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>