force-app/main/default/objects/Asset/recordTypes/Asset_Tradein.recordType-meta.xml
<RecordType>
    <fullName>Asset_Tradein</fullName>
    <active>true</active>
    <label>Asset Tradein</label>
</RecordType>