force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>Frame_Number__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Account_Customer__c</columns>
    <columns>Account_Primary_Owner__c</columns>
    <columns>Inventory_Status__c</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>Invoice_No__c</columns>
    <columns>Sale_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.Asset</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>REVZONE YAMAHA MOTOR SAI GON</value>
    </filters>
    <label>All Assets SG</label>
    <sharedTo>
        <group>Group_User_In_DO_HCM</group>
        <group>Service_HCM</group>
        <group>Service_HN</group>
    </sharedTo>
</ListView>